# RoleML

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: LEARN.ipynb  helloworld.ipynb
docs/experiments/: 0-preparation.md  1-overall-performance.md  2-profiling.md  3-edge-device.md  4-offloading.md
docs/running-distributed-training/: 1-configuring-node.md  2-configuring-role.md  3-adding-new-role.md  4-running-actor.md  5-using-conductor.md  6-using-native-role.md
docs/system-model/: 1-introduction.md  2-role-overview.md  3-channels.md  4-workload.md  5-role-lifecycle.md  6-application-context.md
docs/z-misc/: yaml-extended.md
examples/: requirements.txt
examples/ad_psgd/configs/dev/: appConfig-medium-v1.yaml  appConfig-medium-v2.yaml
examples/ad_psgd/tests/: commands-v1.ini  commands-v2.ini  conductor-v1.yaml  conductor-v2.yaml  conductor_v1.py  conductor_v2.py
examples/e_tree_learning/configs/dev/: appConfig-medium.yaml  appConfig-small-offload.yaml  client-offload.yaml
examples/e_tree_learning/scripts/: run.py
examples/e_tree_learning/tests/: commands.ini  conductor-offload.yaml  conductor.py  conductor.yaml
examples/federated_learning/: README.md
examples/federated_learning/configs/dev/: appConfig-fedavg-medium.yaml  appConfig-fedavg-rpi-multi.yaml  appConfig-fedavg-rpi-single.yaml  appConfig-fedavg-small-overhead.yaml  appConfig-fedavg-small-with-rpi.yaml  appConfig-fedavg-small.yaml  appConfig-fedavg-v2-medium-with-registration-containerized.yaml  appConfig-fedavg-v2-medium-with-registration.yaml  client-with-handshake.yaml  client.yaml  server-fedavg-with-handshake.yaml
examples/federated_learning/scripts/: local_sgd.py  run_resource.py  run_resource_with_stage_pauses.py  run_temperature_rpi.py
examples/federated_learning/scripts/probing/: resource.sh  temperature_rpi.sh
examples/federated_learning/tests/: commands.ini  conductor.py  conductor.yaml
examples/federated_learning/tests/workload/: test_fl.py
examples/gossip_learning/: .gitignore
examples/gossip_learning/configs/dev/: appConfig-medium.yaml  appConfig-small-overhead-containerized.yaml  appConfig-small-overhead.yaml  appConfig-small-with-rpi.yaml  appConfig-small.yaml  client-containerized.yaml  client.yaml
examples/gossip_learning/tests/: commands.ini  conductor.py  conductor.yaml
examples/gossip_learning/tests/workload/: test_gl.py
examples/ring_all_reduce/tests/: conductor.py  conductor.yaml  run_batch.py
roleml/: __init__.py  essentials.py
roleml/core/: context.py  status.py
roleml/core/actor/: base.py  helpers.py  status.py
roleml/core/actor/default/: __init__.py  impl.py  (+2 more)
roleml/core/builders/: actor.py  element.py  helpers.py  role.py
roleml/core/messaging/: base.py  exceptions.py  null.py  types.py
roleml/core/role/: base.py  channels.py  elements.py  exceptions.py  helpers.py  naming.py  types.py
roleml/extensions/containerization/: __init__.py
roleml/extensions/messaging/: util.py
roleml/kits/: interfaces.py  main.py  workload.py
roleml/scripts/runner/: batch.py  single.py
roleml/shared/: aop.py  cli.py  importing.py  interfaces.py  types.py  util.py  yml.py
roleml/shared/collections/: merger.py  segmentation.py
roleml/shared/multithreading/: management.py
tests/fixtures/actors/: basic.py  template.py
tests/fixtures/configs/: basic_car.json  basic_host_guest.json  element.json
tests/fixtures/roles/: __init__.py  basic.py
tests/unittests/core/: test_basic_1.py  test_basic_2.py
(+186 files in other folders)
