[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'roleml-ai'
description = "A role-oriented programming model for distributed ML"
dynamic = ['version']
requires-python = '>=3.11, <4'
dependencies = [
    'schema',                       # for config format validation
    'fasteners >= 0.19',            # for concurrent access (reader-writer lock)
    'PyYAML',                       # for YAML config support
    # dependencies for development
    'typing_extensions >= 4.13.0',  # for @override, TypedDict with extra_items, TypeVar/ParamSpec defaults
]
readme = 'README.md'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: System :: Distributed Computing',
    'Topic :: Scientific/Engineering :: Artificial Intelligence'
]
# using automatic package discovery

[project.urls]
repository = "https://github.com/mrtan-ys/RoleML"

[project.optional-dependencies]
# example usage: pip install roleml-ai[profiling]
# communication backends ---------------------------------
http = [
    'flask',                        # for HTTP server
    'werkzeug',                     # for HTTP server
    'charset-normalizer >= 3',      # for bugfix purpose; package itself required by other packages
    'requests',                     # for HTTP client
]
grpc = ['grpcio', 'grpcio-tools']
# extra features -----------------------------------------
containerization = ['psutil', 'docker', 'podman', 'sqlalchemy']
profiling = ['viztracer']
# we recommend beginners to install with [starter] kit ---
starter = ['grpcio', 'grpcio-tools', 'viztracer']
# TODO default extras in the future? (https://discuss.python.org/t/adding-a-default-extra-require-environment/4898)

[tool.setuptools.dynamic]
version = {attr = 'roleml.__version__'}
